# beancount-daoru

./: .cnb.yml  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE.md  QUICKSTART.md  README.md  pyproject.toml  setup-env.sh
.ide/: Dockerfile  Dockerfile.backup
docs/: DEVELOPMENT.md  SCRIPTS.md  index.md  stats-usage.md
examples/import_only/: import.py
examples/import_only/downloads/: 微信支付账单流水文件(20190801-20190930)——【解压密码可在微信支付公众号查看】.xlsx
examples/import_only/ledger/: imported.beancount
examples/predict/: README.md  import.py
examples/predict/ledger/: accounts.beancount  existing.beancount  few_shot_predicted.beancount  zero_shot_predicted.beancount  zero_shot_predicted00.beancount
scripts/: README.md  activate.sh  build-docker-optimized.sh  build-docker-production.sh  build-with-log.sh  check_ci_consistency.sh  chinese-patch.py  cleanup-llama.sh  dev.sh  download-embedding-model.sh  init-models.sh  run-fava.sh  run-llm-tests.py  setup.sh  setup_precommit.sh  stats.py  verify_ci_consistency.sh
src/beancount_daoru/: __init__.py  hook.py  importer.py  reader.py  utils.py
src/beancount_daoru/hooks/: __init__.py  path_to_name.py  predict_missing_posting.py  reorder_by_importer_name.py
src/beancount_daoru/importers/: __init__.py  alipay.py  boc.py  bocom.py  jd.py  meituan.py  wechat.py
src/beancount_daoru/readers/: __init__.py  excel.py  pdf_table.py
tests/beancount_daoru/: test_importer.py
tests/beancount_daoru/hooks/: test_path_to_name.py  test_predict_missing_posting.py  test_reorder_by_importer_name.py
tests/beancount_daoru/importers/: test_alipay.py  test_boc.py  test_bocom.py  test_jd.py  test_meituan.py  test_wechat.py
tests/beancount_daoru/readers/: test_excel.py  test_pdf_table.py
tests/examples/: conftest.py  test_import_only.py  test_predict.py
